re PR middle-end/36548 (remainder gives the wrong result for wrapping case with unsigned types)

2008-08-28  Richard Guenther  <rguenther@suse.de>

	PR middle-end/36548
	PR middle-end/37125
	* fold-const.c (extract_muldiv_1): Optimize (X * C1) % C2 only
	if the multiplication does not overflow.

	* gcc.c-torture/execute/pr37125.c: New testcase.

From-SVN: r139709